- Continued Ben's great work towards this. - Refactored the existing Java type based PlcValues to a more generic IEC 61131-3 based type system. - Got everything working, all tests to pass etc and did some testing of S7 and Modbus reading.