@@ -25,12 +25,8 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonTypeInfo;
 import org.apache.plc4x.java.api.exceptions.PlcInvalidFieldException;
 
-import org.apache.plc4x.java.api.value.*;
-
 import java.math.BigDecimal;
 import java.math.BigInteger;
-import java.util.LinkedList;
-import java.util.List;
 
 @JsonTypeInfo(use = JsonTypeInfo.Id.CLASS, property = "className")
 public class PlcSINT extends PlcIECValue<Byte> {
@@ -40,7 +36,7 @@ public class PlcSINT extends PlcIECValue<Byte> {
 
     public PlcSINT(Boolean value) {
         super();
-        this.value = value ? new Byte((byte) 1) : new Byte((byte) 0);
+        this.value = value ? Byte.valueOf((byte) 1) : Byte.valueOf((byte) 0);
         this.isNullable = false;
     }
 
@@ -53,7 +49,7 @@ public class PlcSINT extends PlcIECValue<Byte> {
     public PlcSINT(Short value) {
         super();
         if ((value >= minValue) && (value <= maxValue)) {
-            this.value = (Byte) value.byteValue();
+            this.value = value.byteValue();
             this.isNullable = false;
         } else {
             throw new PlcInvalidFieldException("Value of type " + value +
@@ -65,7 +61,7 @@ public class PlcSINT extends PlcIECValue<Byte> {
     public PlcSINT(Integer value) {
         super();
         if ((value >= minValue) && (value <= maxValue)) {
-            this.value = (Byte) value.byteValue();
+            this.value = value.byteValue();
             this.isNullable = false;
         } else {
             throw new PlcInvalidFieldException("Value of type " + value +
@@ -77,7 +73,7 @@ public class PlcSINT extends PlcIECValue<Byte> {
     public PlcSINT(Long value) {
         super();
         if ((value >= minValue) && (value <= maxValue)) {
-            this.value = (Byte) value.byteValue();
+            this.value = value.byteValue();
             this.isNullable = false;
         } else {
             throw new PlcInvalidFieldException("Value of type " + value +
@@ -89,7 +85,7 @@ public class PlcSINT extends PlcIECValue<Byte> {
     public PlcSINT(Float value) {
         super();
         if ((value >= minValue) && (value <= maxValue) && (value % 1 == 0)) {
-            this.value = (Byte) value.byteValue();
+            this.value = value.byteValue();
             this.isNullable = false;
         } else {
             throw new PlcInvalidFieldException("Value of type " + value +
@@ -101,7 +97,7 @@ public class PlcSINT extends PlcIECValue<Byte> {
     public PlcSINT(Double value) {
         super();
         if ((value >= minValue) && (value <= maxValue) && (value % 1 == 0)) {
-            this.value = (Byte) value.byteValue();
+            this.value = value.byteValue();
             this.isNullable = false;
         } else {
             throw new PlcInvalidFieldException("Value of type " + value +
@@ -113,7 +109,7 @@ public class PlcSINT extends PlcIECValue<Byte> {
     public PlcSINT(BigInteger value) {
         super();
         if ((value.compareTo(BigInteger.valueOf(minValue)) >= 0) && (value.compareTo(BigInteger.valueOf(maxValue)) <= 0)) {
-            this.value = (Byte) value.byteValue();
+            this.value = value.byteValue();
             this.isNullable = true;
         } else {
           throw new PlcInvalidFieldException("Value of type " + value +
@@ -125,7 +121,7 @@ public class PlcSINT extends PlcIECValue<Byte> {
     public PlcSINT(BigDecimal value) {
         super();
         if ((value.compareTo(BigDecimal.valueOf(minValue)) >= 0) && (value.compareTo(BigDecimal.valueOf(maxValue)) <= 0) && (value.scale() <= 0)) {
-            this.value = (Byte) value.byteValue();
+            this.value = value.byteValue();
             this.isNullable = true;
         } else {
           throw new PlcInvalidFieldException("Value of type " + value +
@@ -137,8 +133,7 @@ public class PlcSINT extends PlcIECValue<Byte> {
     public PlcSINT(String value) {
         super();
         try {
-            Byte val = Byte.valueOf(value).byteValue();
-            this.value = val;
+            this.value = Byte.valueOf(value);
             this.isNullable = false;
         }
         catch(Exception e) {
@@ -156,6 +151,18 @@ public class PlcSINT extends PlcIECValue<Byte> {
 
     @Override
     @JsonIgnore
+    public boolean isBoolean() {
+        return true;
+    }
+
+    @Override
+    @JsonIgnore
+    public boolean getBoolean() {
+        return (value != null) && !value.equals(0);
+    }
+
+    @Override
+    @JsonIgnore
     public boolean isByte() {
         return true;
     }
@@ -166,8 +173,100 @@ public class PlcSINT extends PlcIECValue<Byte> {
         return value;
     }
 
-    public byte getSINT() {
-        return value;
+    @Override
+    @JsonIgnore
+    public boolean isShort() {
+        return true;
+    }
+
+    @Override
+    @JsonIgnore
+    public short getShort() {
+        return value.shortValue();
+    }
+
+    @Override
+    @JsonIgnore
+    public boolean isInteger() {
+        return true;
+    }
+
+    @Override
+    @JsonIgnore
+    public int getInteger() {
+        return value.intValue();
+    }
+
+    @Override
+    @JsonIgnore
+    public boolean isLong() {
+        return true;
+    }
+
+    @Override
+    @JsonIgnore
+    public long getLong() {
+        return value.longValue();
+    }
+
+    @Override
+    @JsonIgnore
+    public boolean isBigInteger() {
+        return true;
+    }
+
+    @Override
+    @JsonIgnore
+    public BigInteger getBigInteger() {
+        return BigInteger.valueOf(getLong());
+    }
+
+    @Override
+    @JsonIgnore
+    public boolean isFloat() {
+        return true;
+    }
+
+    @Override
+    @JsonIgnore
+    public float getFloat() {
+        return value.floatValue();
+    }
+
+    @Override
+    @JsonIgnore
+    public boolean isDouble() {
+        return true;
+    }
+
+    @Override
+    @JsonIgnore
+    public double getDouble() {
+        return value.doubleValue();
+    }
+
+    @Override
+    @JsonIgnore
+    public boolean isBigDecimal() {
+        return true;
+    }
+
+    @Override
+    @JsonIgnore
+    public BigDecimal getBigDecimal() {
+        return BigDecimal.valueOf(getFloat());
+    }
+
+    @Override
+    @JsonIgnore
+    public boolean isString() {
+        return true;
+    }
+
+    @Override
+    @JsonIgnore
+    public String getString() {
+        return toString();
     }
 
     @Override
@@ -176,6 +275,12 @@ public class PlcSINT extends PlcIECValue<Byte> {
         return Byte.toString(value);
     }
 
+    @JsonIgnore
+    public byte getSINT() {
+        return value;
+    }
+
+    @JsonIgnore
     public byte[] getBytes() {
         byte[] bytes = new byte[1];
         bytes[0] = (byte)(value & 0xff);
